--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,7 +18,7 @@
                 </p>
             </div>
         <%}%>
-        <% for (var i = 0; i < (images.length<3 ? images.length: 3); i++){ %>
+        <% for (var i = 0; i < images.length; i++){ %>
         <div class="col panel">
             <div class="row">
                 <div class="col">
